--- a/SchoolManagementSystem/SchoolManagementSystem.csproj
+++ b/SchoolManagementSystem/SchoolManagementSystem.csproj
@@ -60,11 +60,17 @@
     <Compile Include="Forms\FrmLogin.Designer.cs">
       <DependentUpon>FrmLogin.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\FrmStudentPersonalInformation.cs">
+    <Compile Include="Forms\FrmStudentPersonalInfo.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\FrmStudentPersonalInformation.Designer.cs">
-      <DependentUpon>FrmStudentPersonalInformation.cs</DependentUpon>
+    <Compile Include="Forms\FrmStudentPersonalInfo.Designer.cs">
+      <DependentUpon>FrmStudentPersonalInfo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FrmAddStudentPersonalInfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FrmAddStudentPersonalInfo.Designer.cs">
+      <DependentUpon>FrmAddStudentPersonalInfo.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\FrmAddSubject.cs">
       <SubType>Form</SubType>
@@ -72,12 +78,19 @@
     <Compile Include="Forms\FrmAddSubject.Designer.cs">
       <DependentUpon>FrmAddSubject.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FrmAddStudentRecord.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FrmAddStudentRecord.Designer.cs">
+      <DependentUpon>FrmAddStudentRecord.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FrmSubject.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\FrmSubject.Designer.cs">
       <DependentUpon>FrmSubject.cs</DependentUpon>
     </Compile>
+    <Compile Include="GlobalVar.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\FrmEncodeGrades.resx">
@@ -86,11 +99,17 @@
     <EmbeddedResource Include="Forms\FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\FrmStudentPersonalInformation.resx">
-      <DependentUpon>FrmStudentPersonalInformation.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\FrmStudentPersonalInfo.resx">
+      <DependentUpon>FrmStudentPersonalInfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FrmAddStudentPersonalInfo.resx">
+      <DependentUpon>FrmAddStudentPersonalInfo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmAddSubject.resx">
       <DependentUpon>FrmAddSubject.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FrmAddStudentRecord.resx">
+      <DependentUpon>FrmAddStudentRecord.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmSubject.resx">
       <DependentUpon>FrmSubject.cs</DependentUpon>
